changing API key request email
using support@mappedin.ca instead.

--- a/v1.md
+++ b/v1.md
@@ -20,7 +20,7 @@
   * [Locations](#locations)
   * [Location Types](#location-types)
   * [Maps](#maps)
-  * [Map Groups](#map-groups)
+  * [Map Groups](#map-groups)re
   * [Nodes](#nodes)
   * [Polygons](#polygons)
   * [Venues](#venues)
@@ -47,7 +47,7 @@ The API is organized into 3 parts: venue management, cartography, and wayfinding
 
 ## Authentication and Authorization
 
-You will first need an API key and secret which you can [request from us](mailto:ed@mappedin.ca?subject=API+key+request).
+You will first need an API key and secret which you can [request from us](mailto:support@mappedin.ca?subject=API+key+request).  In your email, please include your name, email address, and the purpose of the application you are developing.
 
 You will then need to request authorization to parts of the API using [OAuth 2.0](https://tools.ietf.org/html/rfc6749). The code, token and client credentials grants are supported. The code and token grants require the user of your application to authenticate with their MappedIn credentials. The authorize endpoint is located at `https://auth.mappedin.com/oauth2/authorize`. The token endpoint is located at `https://auth.mappedin.com/oauth2/token`.
 
