fix various issues and add job api

--- a/v1.md
+++ b/v1.md
@@ -2,7 +2,6 @@
 
 **Table of Contents**
 
-<!-- TOC -->
 * [Getting Started](#getting-started)
   * [Authentication and Authorization](#authentication-and-authorization)
   * [Errors](#errors)
@@ -16,11 +15,12 @@
   * [Directions](#directions)
   * [Events](#events)
   * [Event Types](#event-types)
+  * [Jobs](#jobs)
   * [Kiosks](#kiosks)
   * [Locations](#locations)
   * [Location Types](#location-types)
   * [Maps](#maps)
-  * [Map Groups](#map-groups)re
+  * [Map Groups](#map-groups)
   * [Nodes](#nodes)
   * [Polygons](#polygons)
   * [Venues](#venues)
@@ -37,11 +37,9 @@
   * [Path Segments](#path-segments)
   * [Turn-By-Turn Directions](#turn-by-turn-directions)
 
-<!-- TOC END -->
-
 # Getting Started
 
-The MappedIn API is a interface to the MappedIn backend for venue management and indoor wayfinding. It is a JSON-only API that follows RESTful principles by focusing on resources and the links between them. The API uses HTTP verbs and status codes. Pagination is implemented using forward-only cursors via the Link header. It is secured using OAuth with role-based access control.
+The MappedIn API is a interface to the MappedIn backend for venue management and indoor wayfinding. It is a JSON-only API inspired by RESTful principles. The API makes uses HTTP verbs to express intent and status codes to indicate outcome.
 
 The API is organized into 3 parts: venue management, cartography, and wayfinding. The venue management part focuses on locations, events and organization thereof. The cartography part focuses on creating and displaying maps, nodes and paths. The wayfinding part focuses on training and generating directions for indoor navigation.
 
@@ -51,24 +49,23 @@ You will first need an API key and secret which you can [request from us](mailto
 
 You will then need to request authorization to parts of the API using [OAuth 2.0](https://tools.ietf.org/html/rfc6749). The code, token and client credentials grants are supported. The code and token grants require the user of your application to authenticate with their MappedIn credentials. The authorize endpoint is located at `https://auth.mappedin.com/oauth2/authorize`. The token endpoint is located at `https://auth.mappedin.com/oauth2/token`.
 
-After authenticating with your client credentials and performing the OAuth flow, you will receive an access token which you use to authenticate your requests via [Bearer Token Usage](https://tools.ietf.org/html/rfc6750).
+After authenticating with your client credentials and performing the OAuth flow, you will receive a [Bearer Token](https://tools.ietf.org/html/rfc6750) which you can use to authenticate your requests.
 
 ## Errors
 
-Errors will be returned as 4XX and 5XX HTTP status codes accompanied by an error resource. The error resource will contain a `code` field and a `message` field and may contain other fields depending on the type of error.
+Errors are indicated by 4XX and 5XX status codes and may be accompanied by an error resource. The error resource will contain a `code` field and a `message` field and may contain other fields depending on the type of error.
 
 ### Error Response
 
 |Property|Type|Description|
 |--------|----|-----------|
-|`status`|Number|HTTP status code.|
-|`code`|String|Error type as a string. One of `E_UNKNOWN`, `E_VALIDATION`, `E_ACCESS_DENIED`, `E_MISSING_DOCUMENT`, `E_MISSING_PARAMS`, `E_MISSING_REQUIRED_FIELDS`.|
+|`code`|String|Error type as a string.|
 |`message`|String|Human-readable message describing the error.|
 |`details`|Any|Error-specific details, such as the validation rules violated.|
 
 ## Pagination
 
-GET requests to collections are returned in pages. Pagination is implemented using forward-only cursors via the HTTP Link header. A start point may be specified using the `after` parameter.
+GET requests to collections are returned in pages. Pagination is implemented using forward-only cursors via the [HTTP Link header](https://www.w3.org/wiki/LinkHeader). Currently, only a `next` link will be present in the response. An arbitrary start point may be specified using the `after` parameter.
 
 ### Pagination Arguments
 
@@ -84,7 +81,7 @@ GET requests to collections are returned in pages. Pagination is implemented usi
 
 ## Localization
 
-Much of the MappedIn API is localized. Requests may include a `lang` parameter to request a localized representation of resources. Localized resources exhibit fallback behaviours. For example, requesting a resource in `fr-CA` will return localized properties in the following priority: `fr-CA`, `fr`, `(default)` where `(default)` is the default language of the resource (usually the language in which it was created). When `all` is specified as the language, the raw data is returned through the `_locale`, `_defaultlang` and `_localeFields` properties.
+Much of the MappedIn API is localized. Requests may include a `lang` parameter to request a localized representation of resources. Resource localization obeys a particular fallback behavior. For example, requesting a resource in `fr-CA` will return localized properties in the following priority: `fr-CA`, `fr`, `(default)` where `(default)` is the default language of the resource (usually the language in which it was created).
 
 # Resources
 
@@ -117,9 +114,6 @@ Alerts represent time-sensitive information for a venue, such as a special event
 |`name`|String|Name suitable for display. **Required.** *Localized.*|
 |`startDate`|Number|Date when the alert begins in milliseconds from the Unix epoch. **Required.**|
 |`venue`|String|Venue URL that the alert belongs to. **Required.**|
-|`_defaultlang`|String|Default language (e.g. `en-CA`).|
-|`_locale`|Object|Localized attributes. Structure follows from the parent (excluding, of course, the _locale field).|
-|`_localeFields`|Array|Attributes that can be localized.|
 |`bgColor`|Object|Background color.|
 |`font`|Object|Font style.|
 |`fontColor`|Object|Font color.|
@@ -164,7 +158,7 @@ DELETE https://api.mappedin.com/1/alert HTTP/1.1
 
 ### Get Alert
 
-Query the alert collection with a variety of options: 
+Query the alert collection with a variety of options:
 	You must filter using one or more of these fields: name, venue.
 
 
@@ -228,7 +222,7 @@ GET https://api.mappedin.com/1/amenity HTTP/1.1
 
 ### Get Amenity
 
-Query the amenity collection with a variety of options: 
+Query the amenity collection with a variety of options:
 
 
 ```http
@@ -253,9 +247,6 @@ Amenity types represent the available classes of amenities that can be created w
 |Property|Type|Description|
 |--------|----|-----------|
 |`name`|String|Name suitable for display. **Required.** *Localized.*|
-|`_defaultlang`|String|Default language (e.g. `en-CA`).|
-|`_locale`|Object|Localized attributes. Structure follows from the parent (excluding, of course, the _locale field).|
-|`_localeFields`|Array|Attributes that can be localized.|
 |`value`|String|Venue-unique alternate identifier.|
 
 
@@ -277,7 +268,7 @@ POST https://api.mappedin.com/1/amenity-type HTTP/1.1
 
 ### Get Amenity Type
 
-Query the amenity-type collection with a variety of options: 
+Query the amenity-type collection with a variety of options:
 	Using no filter fields will return all objects in the collection.
 .
 
@@ -324,9 +315,6 @@ Categories represent groups of locations organized for the user interface. Unlik
 |`name`|String|Name suitable for display. **Required.** *Localized.*|
 |`value`|String|Venue-unique alternate identifier. **Required.**|
 |`venue`|String|Venue URL that the category belongs to. **Required.**|
-|`_defaultlang`|String|Default language (e.g. `en-CA`).|
-|`_locale`|Object|Localized attributes. Structure follows from the parent (excluding, of course, the _locale field).|
-|`_localeFields`|Array|Attributes that can be localized.|
 |`isTag`|Boolean|True if the category is also a tag.|
 |`mobilefringe`|Object|Original metadata if synced from MobileFringe.|
 
@@ -366,7 +354,7 @@ DELETE https://api.mappedin.com/1/category HTTP/1.1
 
 ### Get Category
 
-Query the category collection with a variety of options: 
+Query the category collection with a variety of options:
 	You must filter using one or more of these fields: name, venue, value.
 
 
@@ -475,9 +463,6 @@ Events represent time-sensitive information for a location, such as a sale in a 
 |`startDate`|Number|Date when the event begins in milliseconds from the Unix epoch. **Required.**|
 |`type`|String|Event type value that the event belongs to. **Required.**|
 |`venue`|String|Venue URL that the event belongs to. **Required.**|
-|`_defaultlang`|String|Default language (e.g. `en-CA`).|
-|`_locale`|Object|Localized attributes. Structure follows from the parent (excluding, of course, the _locale field).|
-|`_localeFields`|Array|Attributes that can be localized.|
 |`bgColor`|Object|Background color.|
 |`brand`|String|Product brand.|
 |`description`|String|Description. *Localized.*|
@@ -543,7 +528,7 @@ DELETE https://api.mappedin.com/1/event HTTP/1.1
 
 ### Get Event
 
-Query the event collection with a variety of options: 
+Query the event collection with a variety of options:
 	You must filter using one or more of these fields: name, venue, location.
 
 
@@ -646,7 +631,7 @@ DELETE https://api.mappedin.com/1/event-type HTTP/1.1
 
 ### Get Event Type
 
-Query the event-type collection with a variety of options: 
+Query the event-type collection with a variety of options:
 	You must filter using one or more of these fields: name, value, venue.
 
 
@@ -685,6 +670,101 @@ PUT https://api.mappedin.com/1/event-type HTTP/1.1
 |`value`|String|Venue-unique alternate identifier.|
 |`venue`|String|Venue URL that the event type belongs to.|
 
+## Jobs
+
+Jobs represent career opportunities within a venue.
+
+## Job Resource
+
+|Property|Type|Description|
+|--------|----|-----------|
+|`name`|String|Name suitable for display. **Required.** *Localized.*|
+|`venue`|String|Venue URL that the job belongs to. **Required.**|
+|`type`|String|Job type (e.g. `PART_TIME`) **Required.**|
+|`description`|String|Job description. **Required.** *Localized.*|
+|`startDate`|Number|Date from which the job posting is valid in milliseconds since the Unix epoch **Required.**|
+|`endDate`|Number|Date to which the job is valid in milliseconds since the Unix epoch. **Required.**|
+|`contact`|Object|Extended contact information. (e.g. `{ "name": "Spongebob", "email": "spongebob@bikini-bottom.sea" }`). *Localized.*|
+|`location`|String|Location ID that this job belongs to. When omitted or `null`, the job belongs to the venue.|
+
+### Create Job
+
+Creates a new object in the job collection
+
+```http
+POST https://api.mappedin.com/1/job HTTP/1.1
+```
+
+#### Arguments
+
+|Argument|Type|Description|
+|--------|----|-----------|
+|`name`|String|Name suitable for display. **Required.** *Localized.*|
+|`venue`|String|Venue URL that the job belongs to. **Required.**|
+|`type`|String|Job type (e.g. `PART_TIME`) **Required.**|
+|`description`|String|Job description. **Required.** *Localized.*|
+|`startDate`|Number|Date from which the job posting is valid in milliseconds since the Unix epoch **Required.**|
+|`endDate`|Number|Date to which the job is valid in milliseconds since the Unix epoch. **Required.**|
+|`contact`|Object|Extended contact information. (e.g. `{ "name": "Spongebob", "email": "spongebob@bikini-bottom.sea" }`). *Localized.*|
+|`location`|String|Location ID that this job belongs to. When omitted or `null`, the job belongs to the venue.|
+|`lang`|String|Default language for the resource (e.g. `fr`).|
+
+### Delete Job
+
+Removes a single object from the job collection
+
+```http
+DELETE https://api.mappedin.com/1/job HTTP/1.1
+```
+
+#### Arguments
+
+|Argument|Type|Description|
+|--------|----|-----------|
+|`id`|String|Unique Identifier used to find the object to delete. **Required.**|
+
+### Get Job
+
+Query the job collection with a variety of options:
+	You must filter using one or more of these fields: venue.
+
+
+```http
+GET https://api.mappedin.com/1/job HTTP/1.1
+```
+
+#### Arguments
+
+|Argument|Type|Description|
+|--------|----|-----------|
+|`after`|String|Cursor index to continue from (pagination).|
+|`fields`|String|Comma-separated list of fields to include.|
+|`id`|String|Unique Identifier used to get a specific object. If specified, one result is returned as an object, rather than an array.|
+|`lang`|String|Language to return results in.|
+|`venue`|String|Venue URL that the job belongs to.|
+
+### Update Job
+
+Updates a single object in the job collection
+
+```http
+PUT https://api.mappedin.com/1/job HTTP/1.1
+```
+
+#### Arguments
+
+|Argument|Type|Description|
+|--------|----|-----------|
+|`name`|String|Name suitable for display. **Required.** *Localized.*|
+|`venue`|String|Venue URL that the job belongs to. **Required.**|
+|`type`|String|Job type (e.g. `PART_TIME`) **Required.**|
+|`description`|String|Job description. **Required.** *Localized.*|
+|`startDate`|Number|Date from which the job posting is valid in milliseconds since the Unix epoch **Required.**|
+|`endDate`|Number|Date to which the job is valid in milliseconds since the Unix epoch. **Required.**|
+|`contact`|Object|Extended contact information. (e.g. `{ "name": "Spongebob", "email": "spongebob@bikini-bottom.sea" }`). *Localized.*|
+|`location`|String|Location ID that this job belongs to. When omitted or `null`, the job belongs to the venue.|
+|`lang`|String|Default language for the resource (e.g. `fr`).|
+
 
 ## Kiosks
 
@@ -698,14 +778,11 @@ Kiosks represent the physical MappedIn kiosks present within a venue.
 |`name`|String|Name suitable for display. **Required.**|
 |`readableName`|String|Alternate name. **Required.** *Localized.*|
 |`venue`|String|Venue URL that the kiosk belongs to. **Required.**|
-|`_defaultlang`|String|Default language (e.g. `en-CA`).|
-|`_locale`|Object|Localized attributes. Structure follows from the parent (excluding, of course, the _locale field).|
-|`_localeFields`|Array|Attributes that can be localized.|
 |`css`|String|Custom CSS rules that should be injected into the kiosk display.|
 |`dates`|Object|Created and updated dates in milliseconds since the Unix epoch.|
 |`description`|String|Description.|
 |`direction`|String|Direction that the kiosk is facing.|
-|`installed`|Boolean|True if the koisk is installed, enabling features such as kiosk analytics.|
+|`installed`|Boolean|True if the kiosk is installed, enabling features such as kiosk analytics.|
 |`language`|String|Language that the kiosk should default to.|
 |`last_updated`|Number|Last updated in milliseconds since the Unix epoch.|
 |`location`|String|Node identifier that the kiosk is attached to.|
@@ -732,7 +809,7 @@ POST https://api.mappedin.com/1/kiosk HTTP/1.1
 |`dates`|Object|Created and updated dates in milliseconds since the Unix epoch.|
 |`description`|String|Description.|
 |`direction`|String|Direction that the kiosk is facing.|
-|`installed`|Boolean|True if the koisk is installed, enabling features such as kiosk analytics.|
+|`installed`|Boolean|True if the kiosk is installed, enabling features such as kiosk analytics.|
 |`lang`|String|Default language for the resource (e.g. `fr`).|
 |`language`|String|Language that the kiosk should default to.|
 |`last_updated`|Number|Last updated in milliseconds since the Unix epoch.|
@@ -755,7 +832,7 @@ DELETE https://api.mappedin.com/1/kiosk HTTP/1.1
 
 ### Get Kiosk
 
-Query the kiosk collection with a variety of options: 
+Query the kiosk collection with a variety of options:
 	You must filter using one or more of these fields: venue, name, map, location.
 
 
@@ -793,7 +870,7 @@ PUT https://api.mappedin.com/1/kiosk HTTP/1.1
 |`dates`|Object|Created and updated dates in milliseconds since the Unix epoch.|
 |`description`|String|Description.|
 |`direction`|String|Direction that the kiosk is facing.|
-|`installed`|Boolean|True if the koisk is installed, enabling features such as kiosk analytics.|
+|`installed`|Boolean|True if the kiosk is installed, enabling features such as kiosk analytics.|
 |`lang`|String|Language to persist changes for (affects localizable attributes only). If specified and different than the resource's default language, changes that affect localizable attributes will be written for that language only. Otherwise, they will be written for the default language.|
 |`language`|String|Language that the kiosk should default to.|
 |`last_updated`|Number|Last updated in milliseconds since the Unix epoch.|
@@ -816,9 +893,6 @@ Locations represent points of interest within a venue. Any spatial object that h
 |`name`|String|Name suitable for display. **Required.** *Localized.*|
 |`type`|String|Layer value that the location belongs to. **Required.**|
 |`venue`|String|Venue URL that the location belongs to. **Required.**|
-|`_defaultlang`|String|Default language (e.g. `en-CA`).|
-|`_locale`|Object|Localized attributes. Structure follows from the parent (excluding, of course, the _locale field).|
-|`_localeFields`|Array|Attributes that can be localized.|
 |`active`|Number|`1` or `0`.|
 |`address`|String|Address. *Localized.*|
 |`amenity`|String|Amenity value that the location is tagged as.|
@@ -830,7 +904,7 @@ Locations represent points of interest within a venue. Any spatial object that h
 |`description`|String|Description. *Localized.*|
 |`descriptions`|Array|Descriptions. *Localized.*|
 |`direction`|String|Exit direction.|
-|`directionsName`|String|Alternate name or short discription that is substituted for the location name turn-by-turn directions when the location is being used as a landmark (e.g. "turn left at the bank" vs. "turn left at Cartesian Credit Union"). *Localized.*|
+|`directionsName`|String|Alternate name or short description that is substituted for the location name turn-by-turn directions when the location is being used as a landmark (e.g. "turn left at the bank" vs. "turn left at Cartesian Credit Union"). *Localized.*|
 |`email`|String|Email address. *Localized.*|
 |`featured`|Boolean|True if this location should appear in the `featured` widget.|
 |`hasContent`|Boolean|True if the location has content.|
@@ -882,7 +956,7 @@ POST https://api.mappedin.com/1/location HTTP/1.1
 |`description`|String|Description.|
 |`descriptions`|Array|Descriptions.|
 |`direction`|String|Exit direction.|
-|`directionsName`|String|Alternate name or short discription that is substituted for the location name turn-by-turn directions when the location is being used as a landmark (e.g. "turn left at the bank" vs. "turn left at Cartesian Credit Union").|
+|`directionsName`|String|Alternate name or short description that is substituted for the location name turn-by-turn directions when the location is being used as a landmark (e.g. "turn left at the bank" vs. "turn left at Cartesian Credit Union").|
 |`email`|String|Email address.|
 |`featured`|Boolean|True if this location should appear in the `featured` widget.|
 |`hasContent`|Boolean|True if the location has content.|
@@ -924,7 +998,7 @@ DELETE https://api.mappedin.com/1/location HTTP/1.1
 
 ### Get Location
 
-Query the location collection with a variety of options: 
+Query the location collection with a variety of options:
 	You must filter using one or more of these fields: venue.
 	You may also filter using zero or more of these secondary fields: name, searchableNames, type
 
@@ -985,7 +1059,7 @@ PUT https://api.mappedin.com/1/location HTTP/1.1
 |`description`|String|Description.|
 |`descriptions`|Array|Descriptions.|
 |`direction`|String|Exit direction.|
-|`directionsName`|String|Alternate name or short discription that is substituted for the location name turn-by-turn directions when the location is being used as a landmark (e.g. "turn left at the bank" vs. "turn left at Cartesian Credit Union").|
+|`directionsName`|String|Alternate name or short description that is substituted for the location name turn-by-turn directions when the location is being used as a landmark (e.g. "turn left at the bank" vs. "turn left at Cartesian Credit Union").|
 |`email`|String|Email address.|
 |`featured`|Boolean|True if this location should appear in the `featured` widget.|
 |`hasContent`|Boolean|True if the location has content.|
@@ -1026,7 +1100,7 @@ Location types represent the different types of locations. They determine what e
 |`name`|String|Name suitable for display. **Required.**|
 |`value`|String|Venue-unique alternate identifier. **Required.**|
 |`venue`|String|Venue URL that the location type belongs to. **Required.**|
-|`allowOrigin`|Boolean|True if locations on this location type are eligable to be origins for directions.|
+|`allowOrigin`|Boolean|True if locations on this location type are eligible to be origins for directions.|
 |`schema`|Array|Schema names that this location type includes.|
 
 
@@ -1045,7 +1119,7 @@ POST https://api.mappedin.com/1/location-type HTTP/1.1
 |`name`|String|Name suitable for display. **Required.**|
 |`value`|String|Venue-unique alternate identifier. **Required.**|
 |`venue`|String|Venue URL that the location type belongs to. **Required.**|
-|`allowOrigin`|Boolean|True if locations on this location type are eligable to be origins for directions.|
+|`allowOrigin`|Boolean|True if locations on this location type are eligible to be origins for directions.|
 |`lang`|String|Default language for the resource (e.g. `fr`).|
 |`schema`|Array|Schema names that this location type includes.|
 
@@ -1065,7 +1139,7 @@ DELETE https://api.mappedin.com/1/location-type HTTP/1.1
 
 ### Get Location Type
 
-Query the location-type collection with a variety of options: 
+Query the location-type collection with a variety of options:
 	You must filter using one or more of these fields: name, value, venue.
 
 
@@ -1098,7 +1172,7 @@ PUT https://api.mappedin.com/1/location-type HTTP/1.1
 |Argument|Type|Description|
 |--------|----|-----------|
 |`id`|String|Unique Identifier used to find the object to update. **Required.**|
-|`allowOrigin`|Boolean|True if locations on this location type are eligable to be origins for directions.|
+|`allowOrigin`|Boolean|True if locations on this location type are eligaile to be origins for directions.|
 |`lang`|String|Language to persist changes for (affects localizable attributes only). If specified and different than the resource's default language, changes that affect localizable attributes will be written for that language only. Otherwise, they will be written for the default language.|
 |`name`|String|Name suitable for display.|
 |`schema`|Array|Schema names that this location type includes.|
@@ -1108,7 +1182,7 @@ PUT https://api.mappedin.com/1/location-type HTTP/1.1
 
 ## Maps
 
-Maps represent specific spatial areas within a venue. Every venue has a collection of one or more maps. Maps are 2D planar, so irregular surfaces and slopes have to be projected or chosen to best fit the plane. An entire venue can be fit onto one map, or multiple maps can be used to divide the venue by floor or region, dependong on the spatial layout of the venue.
+Maps represent specific spatial areas within a venue. Every venue has a collection of one or more maps. Maps are 2D planar, so irregular surfaces and slopes have to be projected or chosen to best fit the plane. An entire venue can be fit onto one map, or multiple maps can be used to divide the venue by floor or region, depending on the spatial layout of the venue.
 
 All maps have a width and a height so that points of interest can be positioned on the map using Cartesian coordinates. The origin (0,0) is always the top left of the map.
 
@@ -1128,7 +1202,7 @@ All maps have a width and a height so that points of interest can be positioned 
 |`group`|String|Map group identifier that the map belongs to. Empty if the map belongs to the default map group.|
 |`mbtiles`|String|MapBox SQLite tileset database URL.|
 |`original`|String|Original map image URL.|
-|`perspectives`|Object|Map of perspective names (e.g. `Mobile`) to perspective resources.|
+|`perspectives`|Array|Array of named perspectives.|
 |`shortName`|String|Short-form name suitable for display.|
 |`tiles`|String|Tileset root URL. Individual tiles can be retrieved using the naming convention `tiles/zoom/x_y.png` (e.g. `https://cdn.maps-are-great.com/awesome-venue/9/-1_0.png`).|
 
@@ -1158,7 +1232,7 @@ POST https://api.mappedin.com/1/map HTTP/1.1
 |`lang`|String|Default language for the resource (e.g. `fr`).|
 |`mbtiles`|String|MapBox SQLite tileset database URL.|
 |`original`|String|Original map image URL.|
-|`perspectives`|Object|Map of perspective names (e.g. `Mobile`) to perspective resources.|
+|`perspectives`|Array|Array of named perspectives.|
 |`shortName`|String|Short-form name suitable for display.|
 |`tiles`|String|Tileset root URL. Individual tiles can be retrieved using the naming convention `tiles/zoom/x_y.png` (e.g. `https://cdn.maps-are-great.com/awesome-venue/9/-1_0.png`).|
 
@@ -1178,7 +1252,7 @@ DELETE https://api.mappedin.com/1/map HTTP/1.1
 
 ### Get Map
 
-Query the map collection with a variety of options: 
+Query the map collection with a variety of options:
 	You must filter using one or more of these fields: name, venue, group.
 
 
@@ -1222,7 +1296,7 @@ PUT https://api.mappedin.com/1/map HTTP/1.1
 |`mbtiles`|String|MapBox SQLite tileset database URL.|
 |`name`|String|Name suitable for display.|
 |`original`|String|Original map image URL.|
-|`perspectives`|Object|Map of perspective names (e.g. `Mobile`) to perspective resources.|
+|`perspectives`|Array|Array of named perspectives.|
 |`shortName`|String|Short-form name suitable for display.|
 |`tiles`|String|Tileset root URL. Individual tiles can be retrieved using the naming convention `tiles/zoom/x_y.png` (e.g. `https://cdn.maps-are-great.com/awesome-venue/9/-1_0.png`).|
 |`venue`|String|Venue URL that the map belongs to.|
@@ -1273,7 +1347,7 @@ DELETE https://api.mappedin.com/1/map-group HTTP/1.1
 
 ### Get Map Group
 
-Query the map-group collection with a variety of options: 
+Query the map-group collection with a variety of options:
 	You must filter using one or more of these fields: name, venue.
 
 
@@ -1368,7 +1442,7 @@ DELETE https://api.mappedin.com/1/node HTTP/1.1
 
 ### Get Node
 
-Query the node collection with a variety of options: 
+Query the node collection with a variety of options:
 	You must filter using one or more of these fields: venue, map.
 
 
@@ -1414,7 +1488,7 @@ PUT https://api.mappedin.com/1/node HTTP/1.1
 
 ## Polygons
 
-Polygons represent spatial areas on a map. They are used to automatically generate the wayfinding graph, bounding boxes for touch interaction, 3D extrutions and more.
+Polygons represent spatial areas on a map. They are used to automatically generate the wayfinding graph, bounding boxes for touch interaction, 3D extrusions and more.
 
 ### Polygon Resource
 
@@ -1422,7 +1496,7 @@ Polygons represent spatial areas on a map. They are used to automatically genera
 |--------|----|-----------|
 |`map`|String|Map identifier that the polygon belongs to. **Required.**|
 |`venue`|String|Venue URL that the polygon belongs to. **Required.**|
-|`vertices`|Array|Vertices that make up the polgon. **Required.**|
+|`vertices`|Array|Vertices that make up the polygon **Required.**|
 |`icon`|Object|Icon image.|
 |`name`|String|Name.|
 |`sqft`|Number|Square footage.|
@@ -1442,7 +1516,7 @@ POST https://api.mappedin.com/1/polygon HTTP/1.1
 |--------|----|-----------|
 |`map`|String|Map identifier that the polygon belongs to. **Required.**|
 |`venue`|String|Venue URL that the polygon belongs to. **Required.**|
-|`vertices`|Array|Vertices that make up the polgon. **Required.**|
+|`vertices`|Array|Vertices that make up the polygon. **Required.**|
 |`icon`|Object|Icon image.|
 |`lang`|String|Default language for the resource (e.g. `fr`).|
 |`name`|String|Name.|
@@ -1464,7 +1538,7 @@ DELETE https://api.mappedin.com/1/polygon HTTP/1.1
 
 ### Get Polygon
 
-Query the polygon collection with a variety of options: 
+Query the polygon collection with a variety of options:
 	You must filter using one or more of these fields: venue, map.
 
 
@@ -1502,7 +1576,7 @@ PUT https://api.mappedin.com/1/polygon HTTP/1.1
 |`name`|String|Name.|
 |`sqft`|Number|Square footage.|
 |`venue`|String|Venue URL that the polygon belongs to.|
-|`vertices`|Array|Vertices that make up the polgon.|
+|`vertices`|Array|Vertices that make up the polygon.|
 
 
 ## Venues
@@ -1535,7 +1609,7 @@ Venues represent a specific local area, such as an office building, mall, hospit
 
 ### Get Venue
 
-Query the venue collection with a variety of options: 
+Query the venue collection with a variety of options:
 	You must filter using one or more of these fields: name, slug, latitude, longitude.
 
 
@@ -1611,7 +1685,7 @@ DELETE https://api.mappedin.com/1/vortex HTTP/1.1
 
 ### Get Vortex
 
-Query the vortex collection with a variety of options: 
+Query the vortex collection with a variety of options:
 	You must filter using one or more of these fields: name, venue, accessible.
 
 
@@ -1657,34 +1731,6 @@ PUT https://api.mappedin.com/1/vortex HTTP/1.1
 # Types
 
 The following sub-resources, or types, are used to represent resource data.
-
-## Localizations
-
-Localizations are identically structured resources that contain translated data for certain properties. They are organized by language code (e.g. `el`).
-
-### Localization Example
-
-The following is an example of a location resource with a localized location resource property in `_locale`:
-
-```javascript
-{
-  "id": "abc123",
-  "name": "Canada Revenue Agency",
-  "organization": "Government of Canada",
-  "province": "Ontario"
-  "_defaultlang": "en",
-  "_localeFields": [
-    "name",
-	"organization"
-  ],
-  "_locale": {
-    "fr": {
-      "name": "Agence du revenu du Canada",
-	  "organization": "Gouvernment du Canada"
-    }
-  }
-}
-```
 
 ## Color
 
@@ -1747,6 +1793,7 @@ Perspectives are named map projections. They are similar in structure to maps.
 
 |Property|Type|Description|
 |--------|-----|----------|
+|`name`|String|Name.|
 |`image`|String|URL of the map image or tile set.|
 |`mbtiles`|String|URL of a SQLite tile database, for use with MapBox.|
 |`tiled`|`Boolean`|True if the `image` property refers to a tile set.|
@@ -1770,7 +1817,7 @@ Path segments represent the edge between nodes in the wayfinding graph.
 
 ## Turn-By-Turn Directions
 
-Turn-by-turn directions are specific, plain-english instructions to navigate a venue.
+Turn-by-turn directions are specific, plain-English instructions to navigate a venue.
 
 ### Turn-By-Turn Direction Resource
 
