it's just not my day

--- a/v1.md
+++ b/v1.md
@@ -39,7 +39,7 @@
 
 # Getting Started
 
-The MappedIn API is a interface to the MappedIn backend for venue management and indoor wayfinding. It is a JSON-only API inspired by RESTful principles. The API makes use HTTP verbs to express intent and status codes to indicate outcome.
+The MappedIn API is a interface to the MappedIn backend for venue management and indoor wayfinding. It is a JSON-only API inspired by RESTful principles. The API makes use of HTTP verbs to express intent and status codes to indicate outcome.
 
 The API is organized into 3 parts: venue management, cartography, and wayfinding. The venue management part focuses on locations, events and organization thereof. The cartography part focuses on creating and displaying maps, nodes and paths. The wayfinding part focuses on training and generating directions for indoor navigation.
 
