--- a/v1.md
+++ b/v1.md
@@ -1,5 +1,7 @@
 # MappedIn API Reference (v1)
 
+*Note:* This JSON API is useful for testing and examining the data that is available for your Venue, but for a production application you should be using the [Mappedin Web SDK](README.MD).
+
 **Table of Contents**
 
 * [Getting Started](#getting-started)
@@ -38,7 +40,7 @@
 
 # Getting Started
 
-The MappedIn JSON API is a interface to the MappedIn backend for venue management and indoor wayfinding.
+The MappedIn JSON API is an interface to the MappedIn backend for venue management and indoor wayfinding. Using this API directly in a production enviroment is *NOT SUPPORTED*, use the SDK.
 
 The API is organized into 3 parts: venue management, cartography, and wayfinding. The venue management part focuses on locations, events and organization thereof. The cartography part focuses on creating and displaying maps, nodes and paths. The wayfinding part focuses on training and generating directions for indoor navigation.
 
@@ -157,7 +159,7 @@ Amenity types represent the available classes of amenities that can be created w
 ### Get Amenity Type
 
 Query the amenity-type collection with a variety of options:
-	
+
 *Using no filter fields will return all objects in the collection.*
 
 
@@ -469,7 +471,7 @@ Locations represent points of interest within a venue. Any spatial object that h
 ### Get Location
 
 Query the location collection with a variety of options:
-	
+
 *You must filter using one or more of these fields: venue.*
 
 *You may also filter using zero or more of these secondary fields: name, searchableNames, type*
