--- a/v1.md
+++ b/v1.md
@@ -1,6 +1,6 @@
 # MappedIn API Reference (v1)
 
-*Note:* This JSON API is useful for testing and examining the data that is available for your Venue, but for a production application you should be using the [Mappedin Web SDK](README.MD).
+*Note:* This JSON API is useful for testing and examining the data that is available for your Venue, but for a production application you should be using the [Mappedin Web SDK](../..).
 
 **Table of Contents**
 
